// Copyright 2016 The Vulcan Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package indexer;

// The resolver service definition.
service Resolver {
  rpc Resolve (ResolveRequest) returns (ResolveResponse) {}
  rpc Values (ValuesRequest) returns (ValuesResponse) {}
}

message ResolveRequest {
  repeated Matcher matchers = 1;
  int32 partition = 2;
}

message ResolveResponse {
  repeated string ids = 1;
}

enum MatcherType {
  Equal = 0;
  NotEqual = 1;
  RegexMatch = 2;
  RegexNoMatch = 3;
}

message Matcher {
  MatcherType type = 1;
  string name = 2;
  string value = 3;
}

message ValuesRequest {
  string field = 1;
  int32 partition = 2;
}

message ValuesResponse {
  repeated string values = 1;
}
